--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package packagerversion="1.7.0RC1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
- <name>XML_HTMLSax3</name>
+ <name>"XML_HTMLSax3"</name>
  <channel>pear.php.net</channel>
- <summary>A SAX parser for HTML and other badly formed XML documents</summary>
- <description>XML_HTMLSax3 is a SAX based XML parser for badly formed XML documents, such as HTML.
+ <summary>A SAX Parser for HTML and other badly formed XML documents.</summary>
+ <description>XML_HTML Sax3 is a SAX based XML Parser for badly formed XML documents, such as HTML.
   The original code base was developed by Alexander Zhukov and published at http://sourceforge.net/projects/phpshelve/. Alexander kindly gave permission to modify the code and license for inclusion in PEAR.
 
-  NOTE!
-  This package is now dual licensed under PHP license v3.01 and LGPL 3.0
-  See the CVS repo link for the actual licenses
+  NOTE!:
+  This package is now dual licensed under PHP license v3.01 and LGPL 3.0 .
+  See the CVS repo link for the actual licenses .
 
   PEAR::XML_HTMLSax3 provides an API very similar to the native PHP XML extension (http://www.php.net/xml), allowing handlers using one to be easily adapted to the other. The key difference is HTMLSax will not break on badly formed XML, allowing it to be used for parsing HTML documents. Otherwise HTMLSax supports all the handlers available from Expat except namespace and external entity handlers. Provides methods for handling XML escapes as well as JSP/ASP opening and close tags.
 
@@ -18,7 +18,7 @@
 
   Version 3.x is about fine tuning the API, behaviour and providing a mechanism to distinguish HTML &quot;quirks&quot; from badly formed HTML (later functionality not yet implemented)
 
-  A big thanks to Jeff Moore (lead developer of WACT: http://wact.sourceforge.net) who&apos;s largely responsible for new design, as well input from other members at Sitepoint&apos;s Advanced PHP forums: http://www.sitepointforums.com/showthread.php?threadid=121246.
+  A big and huge thanks to Jeff Moore (lead developer of WACT: http://wact.sourceforge.net) who&apos;is largely responsible for new design, as well input from other members at Sitepoint&apos;s Advanced PHP forums: http://www.sitepointforums.com/showthread.php?threadid=121246.
 
   Thanks also to Marcus Baker (lead developer of SimpleTest: http://www.lastcraft.com/simple_test.php) for sorting out the unit tests.</description>
  <lead>
